Change ShellFrom.arguments into singular Literal argument